IcsStudio/ICSStudio.SimpleServices/Compiler/STGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from STGrammar.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

#pragma warning disable 3021
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class STGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, Cheinese=4, IF=5, THEN=6, ELSIF=7, ELSE=8, END_IF=9, 
		CASE=10, OF=11, END_CASE=12, FOR=13, TO=14, CASE_TO=15, DO=16, END_FOR=17, 
		BY=18, REPEAT=19, UNTIL=20, END_REPEAT=21, WHILE=22, END_WHILE=23, EXIT=24, 
		MOD=25, NOT=26, XOR=27, OR=28, AND=29, ID=30, IDSEL=31, BITSEL=32, DOT=33, 
		SEMICOLON=34, COMMA=35, ASSIGN=36, NRASSIGN=37, COLON=38, LPAREN=39, RPAREN=40, 
		LBRACKET=41, RBRACKET=42, PLUS=43, MINUS=44, POW=45, TIMES=46, DIVIDE=47, 
		EQ=48, NEQ=49, LE=50, LT=51, GE=52, GT=53, FLOAT=54, INFINITY=55, NAN=56, 
		BIN_INTEGER=57, OCT_INTEGER=58, HEX_INTEGER=59, DEC_INTEGER=60, WS=61, 
		REGION=62, ENDREGION=63, LINE_COMMENT=64, RANGE_COMMENT=65;
	public const int
		RULE_start = 0, RULE_stmt_list = 1, RULE_stmt = 2, RULE_error_stmt = 3, 
		RULE_assign_stmt = 4, RULE_expr = 5, RULE_xor_expr = 6, RULE_and_expr = 7, 
		RULE_eq_expr = 8, RULE_cmp_expr = 9, RULE_add_expr = 10, RULE_mul_expr = 11, 
		RULE_not_expr = 12, RULE_neg_expr = 13, RULE_pow_expr = 14, RULE_func_expr = 15, 
		RULE_prim_expr = 16, RULE_item = 17, RULE_id_sel_list = 18, RULE_id_sel = 19, 
		RULE_array_sel_list = 20, RULE_bit_sel = 21, RULE_param_list = 22, RULE_instr_stmt = 23, 
		RULE_if_stmt = 24, RULE_elsif_stmt_list = 25, RULE_if_else_stmt = 26, 
		RULE_case_stmt = 27, RULE_case_elem_list = 28, RULE_case_elem = 29, RULE_case_selector_multi = 30, 
		RULE_case_selector = 31, RULE_case_selector_range = 32, RULE_case_else_stmt = 33, 
		RULE_for_stmt = 34, RULE_optional_by = 35, RULE_repeat_stmt = 36, RULE_while_stmt = 37, 
		RULE_number = 38, RULE_integer = 39, RULE_region_stmt = 40, RULE_empty = 41;
	public static readonly string[] ruleNames = {
		"start", "stmt_list", "stmt", "error_stmt", "assign_stmt", "expr", "xor_expr", 
		"and_expr", "eq_expr", "cmp_expr", "add_expr", "mul_expr", "not_expr", 
		"neg_expr", "pow_expr", "func_expr", "prim_expr", "item", "id_sel_list", 
		"id_sel", "array_sel_list", "bit_sel", "param_list", "instr_stmt", "if_stmt", 
		"elsif_stmt_list", "if_else_stmt", "case_stmt", "case_elem_list", "case_elem", 
		"case_selector_multi", "case_selector", "case_selector_range", "case_else_stmt", 
		"for_stmt", "optional_by", "repeat_stmt", "while_stmt", "number", "integer", 
		"region_stmt", "empty"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\uFF1B'", "'*/'", "'*)'", null, null, null, null, null, null, 
		null, null, null, null, null, "'..'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'.'", 
		"';'", "','", "':='", "'[:=]'", "':'", "'('", "')'", "'['", "']'", "'+'", 
		"'-'", "'**'", "'*'", "'/'", "'='", "'<>'", "'<='", "'<'", "'>='", "'>'", 
		null, "'1.$'", "'1.#QNAN'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "Cheinese", "IF", "THEN", "ELSIF", "ELSE", "END_IF", 
		"CASE", "OF", "END_CASE", "FOR", "TO", "CASE_TO", "DO", "END_FOR", "BY", 
		"REPEAT", "UNTIL", "END_REPEAT", "WHILE", "END_WHILE", "EXIT", "MOD", 
		"NOT", "XOR", "OR", "AND", "ID", "IDSEL", "BITSEL", "DOT", "SEMICOLON", 
		"COMMA", "ASSIGN", "NRASSIGN", "COLON", "LPAREN", "RPAREN", "LBRACKET", 
		"RBRACKET", "PLUS", "MINUS", "POW", "TIMES", "DIVIDE", "EQ", "NEQ", "LE", 
		"LT", "GE", "GT", "FLOAT", "INFINITY", "NAN", "BIN_INTEGER", "OCT_INTEGER", 
		"HEX_INTEGER", "DEC_INTEGER", "WS", "REGION", "ENDREGION", "LINE_COMMENT", 
		"RANGE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "STGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static STGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public STGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public STGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		public Stmt_listContext stmt_list() {
			return GetRuleContext<Stmt_listContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; stmt_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stmt_listContext : ParserRuleContext {
		public Stmt_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt_list; } }
	 
		public Stmt_listContext() { }
		public virtual void CopyFrom(Stmt_listContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StmtListEmptyContext : Stmt_listContext {
		public EmptyContext empty() {
			return GetRuleContext<EmptyContext>(0);
		}
		public StmtListEmptyContext(Stmt_listContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtListEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtListContext : Stmt_listContext {
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public StmtListContext(Stmt_listContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Stmt_listContext stmt_list() {
		Stmt_listContext _localctx = new Stmt_listContext(Context, State);
		EnterRule(_localctx, 2, RULE_stmt_list);
		try {
			int _alt;
			State = 92;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new StmtListContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 86; stmt();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 89;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				_localctx = new StmtListEmptyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 91; empty();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
	 
		public StmtContext() { }
		public virtual void CopyFrom(StmtContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StmtEmptyContext : StmtContext {
		public EmptyContext empty() {
			return GetRuleContext<EmptyContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(STGrammarParser.SEMICOLON, 0); }
		public StmtEmptyContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtRepeatContext : StmtContext {
		public Repeat_stmtContext repeat_stmt() {
			return GetRuleContext<Repeat_stmtContext>(0);
		}
		public StmtRepeatContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtRepeat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtWhileContext : StmtContext {
		public While_stmtContext while_stmt() {
			return GetRuleContext<While_stmtContext>(0);
		}
		public StmtWhileContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtRegionLableContext : StmtContext {
		public Region_stmtContext region_stmt() {
			return GetRuleContext<Region_stmtContext>(0);
		}
		public StmtRegionLableContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtRegionLable(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtChineseContext : StmtContext {
		public ITerminalNode Cheinese() { return GetToken(STGrammarParser.Cheinese, 0); }
		public StmtChineseContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtChinese(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtForContext : StmtContext {
		public For_stmtContext for_stmt() {
			return GetRuleContext<For_stmtContext>(0);
		}
		public StmtForContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtFor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtUnexpectedContext : StmtContext {
		public ItemContext item() {
			return GetRuleContext<ItemContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StmtUnexpectedContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtUnexpected(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtAssignContext : StmtContext {
		public Assign_stmtContext assign_stmt() {
			return GetRuleContext<Assign_stmtContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(STGrammarParser.SEMICOLON, 0); }
		public StmtAssignContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtAssign(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtIfContext : StmtContext {
		public If_stmtContext if_stmt() {
			return GetRuleContext<If_stmtContext>(0);
		}
		public StmtIfContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtIf(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtInstrContext : StmtContext {
		public Instr_stmtContext instr_stmt() {
			return GetRuleContext<Instr_stmtContext>(0);
		}
		public StmtInstrContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtInstr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtExitContext : StmtContext {
		public ITerminalNode EXIT() { return GetToken(STGrammarParser.EXIT, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(STGrammarParser.SEMICOLON, 0); }
		public StmtExitContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtExit(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtCaseContext : StmtContext {
		public Case_stmtContext case_stmt() {
			return GetRuleContext<Case_stmtContext>(0);
		}
		public StmtCaseContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtCase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 4, RULE_stmt);
		try {
			State = 113;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new StmtAssignContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 94; assign_stmt();
				State = 95; Match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new StmtInstrContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 97; instr_stmt();
				}
				break;
			case 3:
				_localctx = new StmtIfContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 98; if_stmt();
				}
				break;
			case 4:
				_localctx = new StmtCaseContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 99; case_stmt();
				}
				break;
			case 5:
				_localctx = new StmtForContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 100; for_stmt();
				}
				break;
			case 6:
				_localctx = new StmtRepeatContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 101; repeat_stmt();
				}
				break;
			case 7:
				_localctx = new StmtWhileContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 102; while_stmt();
				}
				break;
			case 8:
				_localctx = new StmtRegionLableContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 103; region_stmt();
				}
				break;
			case 9:
				_localctx = new StmtChineseContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 104; Match(Cheinese);
				}
				break;
			case 10:
				_localctx = new StmtExitContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 105; Match(EXIT);
				State = 106; Match(SEMICOLON);
				}
				break;
			case 11:
				_localctx = new StmtUnexpectedContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 107; item();
				State = 108; expr(0);
				}
				break;
			case 12:
				_localctx = new StmtEmptyContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 110; empty();
				State = 111; Match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Error_stmtContext : ParserRuleContext {
		public Error_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_error_stmt; } }
	 
		public Error_stmtContext() { }
		public virtual void CopyFrom(Error_stmtContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ErrorStmtContext : Error_stmtContext {
		public ItemContext item() {
			return GetRuleContext<ItemContext>(0);
		}
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public ITerminalNode LBRACKET() { return GetToken(STGrammarParser.LBRACKET, 0); }
		public ITerminalNode RBRACKET() { return GetToken(STGrammarParser.RBRACKET, 0); }
		public ITerminalNode Cheinese() { return GetToken(STGrammarParser.Cheinese, 0); }
		public ErrorStmtContext(Error_stmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTGrammarVisitor<TResult> typedVisitor = visitor as ISTGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitErrorStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Error_stmtContext error_stmt() {
		Error_stmtContext _localctx = new Error_stmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_error_stmt);
		try {
			int _alt;
			_localctx = new ErrorStmtContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				{
				State = 115; Match(T__0);
				}
				break;
			case ID:
				{
				State = 116; item();
				}
				break;
			case PLUS:
			case MINUS:
			case FLOAT:
			case BIN_INTEGER:
			case OCT_INTEGER:
			case HEX_INTEGER:
			case DEC_INTEGER:
				{
				State = 117; number();
				}
				break;
			case LBRACKET:
				{
				State = 118; Match(LBRACKET);
				}
				break;
			case RBRACKET:
				{
				State = 119; Match(RBRACKET);
				}
				break;
			case T__1:
				{
				State = 121;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 120; Match(T__1);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 123;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case T__2:
				{
				State = 126;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 125; Match(T__2);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 128;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case Cheinese:
				{
				State = 130; Match(Cheinese);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
